# haskell-web-serv

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  deploy.sh  mnist-web.cabal  stack.yaml
.github/workflows/: deploy.yml
assets/: style.css
assets/templates/: home.html  login.html  post_item.html  register.html
infra/: main.tf  user_data.sh  variables.tf
src/: Main.hs
src/App/: Auth.hs  Board.hs  BoardExport.hs  DB.hs  Env.hs  Html.hs  Server.hs  TemplateFiles.hs  Templates.hs  Types.hs
